@@ -1,0 +1,5 @@
+<ul>
+<!-- BEGIN documents -->
+<li>{ICON} {TITLE}</li>
+<!-- END documents -->
+</ul>
