@@ -1,3 +1,4 @@
 <p>{IMAGES}</p>
 <div id="image-folders"> </div>
 <p>{DOCUMENTS}</p>
+<div id="document-folders"> </div>
