@@ -1,3 +1,9 @@
+23 March 2009
++ Added document FCKeditor interaction
++ Updated: javascript/fckeditor/head.js
+templates/fckeditor.tpl
+templates/fckdocuments.tpl
+
 20 March 2009
 + Started building FCKeditor interaction
 + Updated:
